fix: adjusts projects on mobile mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -71,8 +71,11 @@ body {
     .projects__content {
         margin: 40px auto;
         display: flex;
-        flex: 1;
-        align-items: center;
-        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .projects__content .project {
+        display: flex;
+        width: 100%;
     }
 }
